@@ -4,7 +4,6 @@ import lombok.Getter;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 public enum Edition {
@@ -22,6 +21,6 @@ public enum Edition {
     public static List<String> getAllDisplayNames() {
         return Arrays.stream(values())
                 .map(Edition::getDisplayName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
